updateded quiz answers

--- a/Quiz1.html
+++ b/Quiz1.html
@@ -65,6 +65,7 @@ Don't plot more than two variables at at time
 Show comparisons
 Make judicious use of color in your scatterplots
 Show box plots (univariate summaries)</code></pre>
+<pre><code>Answer: Show comparisons</code></pre>
 </div>
 <div id="question-2" class="section level3">
 <h3>Question 2</h3>
@@ -73,6 +74,7 @@ Show box plots (univariate summaries)</code></pre>
 They are made for formal presentations.
 Axes, legends, and other details are clean and exactly detailed.
 They are used in place of formal modeling.</code></pre>
+<pre><code>Answer: They are typically made very quickly.</code></pre>
 </div>
 <div id="question-3" class="section level3">
 <h3>Question 3</h3>
@@ -81,6 +83,7 @@ They are used in place of formal modeling.</code></pre>
 Plots are created and annotated with separate functions
 Margins and spacings are adjusted automatically depending on the type of plot and the data
 Plots are typically created with a single function call</code></pre>
+<pre><code>Answer: Plots are created and annotated with separate functions</code></pre>
 </div>
 <div id="question-4" class="section level3">
 <h3>Question 4</h3>
@@ -89,6 +92,7 @@ Plots are typically created with a single function call</code></pre>
 A PNG file
 A socket connection
 A Microsoft Word document</code></pre>
+<pre><code>Answer: A PNG file</code></pre>
 </div>
 <div id="question-5" class="section level3">
 <h3>Question 5</h3>
@@ -97,6 +101,7 @@ A Microsoft Word document</code></pre>
 SVG
 PNG
 GIF</code></pre>
+<pre><code>Answer: SVG</code></pre>
 </div>
 <div id="question-6" class="section level3">
 <h3>Question 6</h3>
@@ -105,6 +110,7 @@ GIF</code></pre>
 Plots that require animation or interactivity
 Plots that may need to be resized
 Scatterplots with many many points</code></pre>
+<pre><code>Answer:  Plots that are not scaled to a specific resolution</code></pre>
 </div>
 <div id="question-7" class="section level3">
 <h3>Question 7</h3>
@@ -113,6 +119,7 @@ Scatterplots with many many points</code></pre>
 text()
 hist()
 boxplot()</code></pre>
+<pre><code>Answer: text()</code></pre>
 </div>
 <div id="question-8" class="section level3">
 <h3>Question 8</h3>
@@ -121,6 +128,7 @@ boxplot()</code></pre>
 xfig()
 windows()
 jpeg()</code></pre>
+<pre><code>Answer: windows()</code></pre>
 </div>
 <div id="question-9" class="section level3">
 <h3>Question 9</h3>
@@ -129,6 +137,7 @@ jpeg()</code></pre>
 the size of the plotting symbol in a scatterplot
 the orientation of the axis labels on the plot
 the plotting symbol/character in the base graphics system</code></pre>
+<pre><code>Answer: the plotting symbol/character in the base graphics system</code></pre>
 </div>
 <div id="question-10" class="section level3">
 <h3>Question 10</h3>
@@ -137,6 +146,8 @@ the plotting symbol/character in the base graphics system</code></pre>
 Construct the plot on the screen device and then copy it to a PDF file with dev.copy2pdf()
 Open the PostScript device with postscript(), construct the plot, then close the device with dev.off().
 Open the screen device with quartz(), construct the plot, and then close the device with dev.off().</code></pre>
+<pre><code>Answer: Construct the plot on the screen device and then copy it to a PDF file with dev.copy2pdf()
+</code></pre>
 </div>
 
 
